<resources>
    <string name="app_name">klikAlumnoV2</string>
    <string name="usuario">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="img_todo">TODO</string>
    <string name="plataforma_educativa">Plataforma educativa</string>
    <string name="description_text"><![CDATA[<b><font color="#165989">Diseñada para potenciar</font></b> <font color="#6BB3A3">la enseñanza y el aprendizaje de forma dinámica, interactiva y personalizada.</font>]]></string>
    <string name="welcome_message"><![CDATA[<b>¡Bienvenido!</b>]]></string>
    <string name="forgot_password_text"><u>Olvidé mi contraseña</u></string>
    <string name="improving"><b>Innovando para mejorar la educación</b></string>
    <string name="education"><b>la educación</b></string>
    <string name="groups_text"><b>Grupos</b></string>
    <string name="groups_description">Gestiona los grupos escolares y su información relacionada</string>
    <string name="groups_btn">Ir a grupos</string>
    <string name="logo_klik">Logo Klik</string>
    <string name="libro_de_firmas">Libro de firmas</string>
    <string name="people">people</string>
    <string name="dotted_line">dotted line</string>
    <string name="vista_de_computadora">Vista de computadora</string>
    <string name="window_description_title"><![CDATA[<b><font color="#4ab7a2">Practica tu inglés</font></b>]]></string>
    <string name="window_first_description">
        Mejora tu nivel de inglés de forma dinámica y divertida. En esta sección encontrarás herramientas
        diseñadas para ayudarte a aprender y reforzar tus conocimientos de manera práctica.
    </string>
    <string name="window_second_description">
        ¡Empieza hoy y lleva tu inglés al siguiente nivel!
    </string>
    <string name="window_btn">Practicar</string>
    <string name="home_icon">Home Icon</string>
    <string name="groups_icon">Groups Icon</string>
    <string name="tutorials_icon">Tutorials Icon</string>
    <string name="groups_view_title"><![CDATA[<b><font color="#4ab7a2">Grupos</font></b>]]></string>
    <string name="token_image">Token image</string>
    <string name="token_text">Token</string>
    <string name="isbn_text">ISBN</string>
    <string name="search_group_label">Buscar grupo</string>
    <string name="tutorials_view_title"><![CDATA[<b><font color="#4ab7a2">Tutoriales</font></b>]]></string>
    <string name="manuals_view_title"><![CDATA[<b><font color="#4ab7a2">Manuales</font></b>]]></string>
    <string name="men_izquierdo">Menú izquierdo</string>
    <string name="men_derecho">Menú derecho</string>
    <string name="user_icon">User Icon</string>

    <!-- Strings pertenecientes al menú del toolbar superior -->
    <string name="toolbar_menu_title">Klik</string>
    <string name="user_menu_title">Usuario</string>
    <string name="user_menu_opt1">Opción 1</string>
    <string name="user_menu_opt2">Opción 2</string>

    <!-- Strings del footer dinámico -->
    <string name="brain_icon">Brain icon</string>
    <string name="headphones_screen_icon">Headphones and screen icon</string>
    <string name="controller_icon">Controller icon</string>
    <string name="bag_icon">Bag icon</string>
</resources>